fix: fix overflow issue

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  height: 100vh;
+  min-height: 100vh !important;
 }
 
 h1 {
